src/test/testData/AnnotatorTestData.java
public class Test {
  public static void main(String[] args) {
    System.out.println("jdl:website");
    System.out.println("jdl:key with spaces");
    System.out.println("jdl:<error descr="Unresolved property">websit</error>");
  }
}
